--- a/package.json
+++ b/package.json
@@ -6,12 +6,16 @@
     "packages/*"
   ],
   "scripts": {
-    "build": "npm run build --workspaces",
-    "start:dev": "npm run start:dev --workspace=@buenro/api & npm run start:dev --workspace=@buenro/ingestion",
-    "start:api": "npm run start:dev --workspace=@buenro/api",
-    "start:ingestion": "npm run start:dev --workspace=@buenro/ingestion",
-    "test": "npm run test --workspaces",
-    "lint": "npm run lint --workspaces",
+    "build": "npm run build --workspaces --if-present",
+    "build:common": "npm run build --workspace=@buenro/common",
+    "build:api": "npm run build:common && npm run build --workspace=@buenro/api",
+    "build:ingestion": "npm run build:common && npm run build --workspace=@buenro/ingestion",
+    "start:dev": "npm run build:common && npm run start:dev --workspace=@buenro/api & npm run start:dev --workspace=@buenro/ingestion",
+    "start:api": "npm run build:common && npm run start:dev --workspace=@buenro/api",
+    "start:ingestion": "npm run build:common && npm run start:dev --workspace=@buenro/ingestion",
+    "test": "npm run test --workspaces --if-present",
+    "lint": "npm run lint --workspaces --if-present",
+    "format": "npm run format --workspaces --if-present"
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
