--- a/packages/ingestion/package.json
+++ b/packages/ingestion/package.json
@@ -15,19 +15,13 @@
   },
   "dependencies": {
     "@buenro/common": "^1.0.0",
+
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/config": "^3.0.0",
-    "@nestjs/bull": "^10.0.0",
-    "@nestjs/schedule": "^4.0.0",
-    "@nestjs/mongoose": "^10.0.0",
-    "@aws-sdk/client-s3": "^3.400.0",
-    "bull": "^4.11.0",
-    "mongoose": "^8.0.0",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.1",
-    "JSONStream": "^1.3.5"
+    "rxjs": "^7.8.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
@@ -36,7 +30,6 @@
     "@types/express": "^4.17.17",
     "@types/node": "^20.0.0",
     "@types/jest": "^29.5.0",
-    "@types/jsonstream": "^0.8.30",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "eslint": "^8.42.0",
