--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -50,8 +50,23 @@
     "transform": {
       "^.+\\.(t|j)s$": "ts-jest"
     },
-    "collectCoverageFrom": ["**/*.(t|j)s"],
+    "collectCoverageFrom": [
+      "**/*.(t|j)s",
+      "!**/*.spec.ts",
+      "!**/*.interface.ts",
+      "!**/main.ts",
+      "!**/app.module.ts"
+    ],
     "coverageDirectory": "../coverage",
+    "coverageReporters": ["text", "text-summary", "html", "lcov"],
+    "coverageThreshold": {
+      "global": {
+        "branches": 80,
+        "functions": 80,
+        "lines": 80,
+        "statements": 80
+      }
+    },
     "testEnvironment": "node"
   }
 }
