--- a/packages/api/tsconfig.json
+++ b/packages/api/tsconfig.json
@@ -10,5 +10,5 @@
     }
   },
   "include": ["src/**/*"],
-  "exclude": ["node_modules", "dist", "test", "**/*spec.ts"]
+  "exclude": ["node_modules", "dist"]
 }
