--- a/packages/ingestion/.env.example
+++ b/packages/ingestion/.env.example
@@ -1,8 +1,9 @@
 # Node Environment
 NODE_ENV=development
 
-PORT=3001
-
 # MongoDB Configuration
 MONGO_URI=mongodb://admin:admin123@localhost:27017/buenro?authSource=admin
 
+ INGESTION_SOURCE="./src/test.json"
+# INGESTION_SOURCE="https://buenro-tech-assessment-materials.s3.eu-north-1.amazonaws.com/structured_generated_data.json"
+# INGESTION_SOURCE="https://buenro-tech-assessment-materials.s3.eu-north-1.amazonaws.com/large_generated_data.json"
