--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,8 +18,8 @@
     "forceConsistentCasingInFileNames": false,
     "noFallthroughCasesInSwitch": false,
     "paths": {
-      "@buenro/common": ["packages/common/src"],
-      "@buenro/common/*": ["packages/common/src/*"]
+      "@buenro/common": ["packages/common/dist"],
+      "@buenro/common/*": ["packages/common/dist/*"]
     }
   }
 }
